PIC-728 added or and and complex criteria annotation